--- a/KSL6 web/ksl6_website.html
+++ b/KSL6 web/ksl6_website.html
@@ -389,7 +389,7 @@
             
             <div class="history-highlight">
                 <h3>Reclaiming Our Number</h3>
-                <p>In 2014, during Grand Lodge week, a historic moment occurred. After being known as Lodge #94 for 174 years, our lodge successfully petitioned to reclaim our original number #6, which was granted to us as a founding member of the Grand Lodge of Tennessee. Special thanks to Brother Robert Wade Lankford and all the brethren who worked tirelessly to restore this important piece of our heritage.</p>
+                <p>In 2014, during Grand Lodge week, a historic moment occurred. After being known as Lodge #94 for 174 years, our lodge successfully petitioned to reclaim our original number #6, which was granted to us as a founding member of the Grand Lodge of Tennessee. Special thanks to Brother Ethan Slarke, Brother Robert Wade Lankford and all the brethren who worked tirelessly to restore this important piece of our heritage.</p>
             </div>
             
             <div class="card-grid">
