--- a/ksl6_website.html
+++ b/ksl6_website.html
@@ -457,7 +457,7 @@
                 <p><strong>Meal:</strong> 6:00 PM</p>
                 <p><strong>Meeting:</strong> 7:00 PM</p>
                 <p><strong>Where:</strong> 354 E Main Street, Gallatin, TN 37066</p>
-                <p><strong>Dress:</strong> Business attire or better</p>
+                <p><strong>Dress:</strong> Business Casual or better</p>
             </div>
         </section>
         
@@ -591,7 +591,7 @@
         <section id="socials" class="section">
             <h2>Socials</h2>
             <p>Connect with King Solomon Lodge #6 on social media:</p>
-            <div class="card">
+            <div class="card" role="link" tabindex="0" aria-label="Open King Solomon Lodge #6 on Facebook (opens in new tab)" onclick="window.open('https://www.facebook.com/King-Solomon-Lodge-6-F-AM-135124969913600/','_blank');" onkeydown="if(event.key==='Enter' || event.key===' ' || event.key==='Spacebar'){ event.preventDefault(); window.open('https://www.facebook.com/King-Solomon-Lodge-6-F-AM-135124969913600/','_blank'); }">
                 <h3>Facebook</h3>
                 <p>
                     <a class="social-link" href="https://www.facebook.com/King-Solomon-Lodge-6-F-AM-135124969913600/" target="_blank" rel="noopener">
