--- a/ksl6_website.html
+++ b/ksl6_website.html
@@ -614,6 +614,9 @@
                 <p><strong>Email:</strong> kingsolomonlodge6@gmail.com</p>
                 <p><strong>Mailing:</strong> P.O. Box 1135, Gallatin, TN 37066</p>
                 <p style="margin-top: 20px;">We welcome inquiries from interested men and visiting brothers. Please reach out to learn more about our lodge or to schedule a visit.</p>
+                <p style="margin-top: 18px; text-align: center;">
+                    <a class="cta-button" href="http://www.frankoakes3.com/KingSolomon6Text.html" target="_blank" rel="noopener">Member Portal</a>
+                </p>
             </div>
         </section>
     </div>
